--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">G>L.D.</a>
+        <a class="navbar-brand" href="/">G.L.D.</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,16 +50,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
         </div>
@@ -67,10 +67,10 @@
     </nav>
 
     <div class="header">
-      <h3>Hi, I am</h3>
+      <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
       <h3>Front End Developer based in Nevada</h3>
-      <button>Check out my work!</button>
+      <a href="#">Check out my work!</a>
     </div>
   </body>
 </html>
