Updated CSS for the top portion of the homepage

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <div class="header">
       <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
-      <h3>Front End Developer based in Nevada</h3>
-      <a href="#">Check out my work!</a>
+      <h4>Front End Developer based in Nevada</h4>
+      <button><a href="#">Check out my work!</a></button>
     </div>
   </body>
 </html>
