Added the content of the homepage

--- a/index.html
+++ b/index.html
@@ -72,5 +72,24 @@
       <h4>Front End Developer based in Nevada</h4>
       <button><a href="#">Check out my work!</a></button>
     </div>
+
+    <p class="text-center fs-3 opacity-75">Featured Project</p>
+
+    <div class="container mb-5">
+      <div class="row mt-5">
+        <div class="col">
+          <img
+            src="/images/weather-app.png"
+            alt="Screenshot of My Weather Application"
+            class="img-fluid border p-2 rounded shadow"
+          />
+        </div>
+        <div class="col">
+          <h2>Weather Application</h2>
+          <p>Built with Vanilla JavaScript</p>
+          <a href="#">Launch Weather App</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
