Updated CSS for the homepage content

--- a/index.html
+++ b/index.html
@@ -76,18 +76,22 @@
     <p class="text-center fs-3 opacity-75">Featured Project</p>
 
     <div class="container mb-5">
-      <div class="row mt-5">
-        <div class="col">
+      <div class="row">
+        <div class="col mt-5">
           <img
             src="/images/weather-app.png"
             alt="Screenshot of My Weather Application"
             class="img-fluid border p-2 rounded shadow"
           />
         </div>
-        <div class="col">
+        <div class="col text-center weather-app-description">
           <h2>Weather Application</h2>
-          <p>Built with Vanilla JavaScript</p>
-          <a href="#">Launch Weather App</a>
+          <p>Built using Vanilla JavaScript</p>
+          <button>
+            <a href="https://upbeat-benz-e12b13.netlify.app/" target="_blank"
+              >Launch Weather App</a
+            >
+          </button>
         </div>
       </div>
     </div>
