--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
     <div class="container mb-5">
       <div class="row">
-        <div class="col mt-5">
+        <div class="col-sm-6 mt-5">
           <img
             src="/images/weather-app.png"
             alt="Screenshot of My Weather Application"
             class="img-fluid border p-2 rounded shadow"
           />
         </div>
-        <div class="col text-center weather-app-description">
+        <div class="col-sm-6 text-center weather-app-description">
           <h2>Weather Application</h2>
           <p>Built using Vanilla JavaScript</p>
           <button>
