--- a/about-me.html
+++ b/about-me.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="stylesheet" href="/styles/about-me.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,10 +50,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about-me.html">About</a>
+              <a class="nav-link active" href="/about-me.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Work</a>
