--- a/about-me.html
+++ b/about-me.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Front End Developer, Genevieve Leanne Dominguez</title>
+    <title>About Me: Front End Developer, Genevieve Leanne Dominguez</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -65,5 +65,27 @@
         </div>
       </div>
     </nav>
+
+    <div class="container-fluid">
+      <div class="row text-center header">
+        <div class="col-6">
+          <h3>Hey, I'm</h3>
+          <h1>Genevieve Leanne Dominguez</h1>
+          <p class="mt-4">
+            Nice to meet you! I currently reside in Northern Nevada. I'm 25
+            years old with a BA in English. I'm also a front end developer.
+            <br />
+            When I'm not coding, I'm writing, listening to music, or reading.
+          </p>
+        </div>
+        <div class="col-6">
+          <img
+            src="/images/image-me.JPG"
+            alt="Placeholder for Professional Headshot"
+            class="img-fluid border border-primary p-2 shadow rounded"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
