--- a/about-me.html
+++ b/about-me.html
@@ -67,23 +67,30 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="row text-center header">
-        <div class="col-6">
-          <h3>Hey, I'm</h3>
-          <h1>Genevieve Leanne Dominguez</h1>
-          <p class="mt-4">
-            Nice to meet you! I currently reside in Northern Nevada. I'm 25
-            years old with a BA in English. I'm also a front end developer.
-            <br />
-            When I'm not coding, I'm writing, listening to music, or reading.
-          </p>
-        </div>
-        <div class="col-6">
+      <div class="row header">
+        <div class="col-sm-6">
           <img
             src="/images/image-me.JPG"
             alt="Placeholder for Professional Headshot"
             class="img-fluid border border-primary p-2 shadow rounded"
           />
+        </div>
+        <div class="col-sm-6">
+          <h3 class="text-center">Hey, I'm</h3>
+          <h1 class="text-center">Genevieve Leanne Dominguez</h1>
+          <p class="mt-4">
+            Nice to meet you! I currently reside in Northern Nevada. I'm 25
+            years old with a BA in English. I was an online ESL teacher but
+            decided to make a career change when the industry made some
+            permanent changes. I began learning how to code in 2021 with
+            SheCodes (an amazing coding bootcamp, by the way). I'm proud to say
+            that I'm on my way to becoming a front end developer! All my
+            projects have been designed and coded by me.
+            <br />
+            <br />
+            When I'm not coding, I'm writing, listening to music, or reading.
+            Check out my work and don't hesitate to contact me!
+          </p>
         </div>
       </div>
     </div>
