Renamed second CSS file

--- a/about-me.html
+++ b/about-me.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="/styles/about-me.css" />
+    <link rel="stylesheet" href="/styles/portfolio-pages.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,7 +56,7 @@
               <a class="nav-link active" href="/about-me.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link" href="/my-work.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -85,7 +85,8 @@
             permanent changes. I began learning how to code in 2021 with
             SheCodes (an amazing coding bootcamp, by the way). I'm proud to say
             that I'm on my way to becoming a front end developer! All my
-            projects have been designed and coded by me.
+            projects, including this website, have been designed and coded by
+            me.
             <br />
             <br />
             When I'm not coding, I'm writing, listening to music, or reading.
