--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="/about-me.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link" href="/my-work.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -70,7 +70,7 @@
       <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
       <h4>Front End Developer based in Nevada</h4>
-      <button><a href="#">Check out my work!</a></button>
+      <button><a href="/my-work.html">Check out my work!</a></button>
     </div>
 
     <p class="text-center fs-3 opacity-75 mb-5">Featured Project</p>
