--- a/my-work.html
+++ b/my-work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me: Front End Developer, Genevieve Leanne Dominguez</title>
+    <title>My Work: Front End Developer, Genevieve Leanne Dominguez</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="/styles/about-me.css" />
+    <link rel="stylesheet" href="/styles/portfolio-pages.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -53,10 +53,10 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about-me.html">About</a>
+              <a class="nav-link" href="/about-me.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link active" href="/my-work.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
