Added initial CSS setup for "Work" page

--- a/about-me.html
+++ b/about-me.html
@@ -72,7 +72,14 @@
           <img
             src="/images/image-me.JPG"
             alt="Placeholder for Professional Headshot"
-            class="img-fluid border border-primary p-2 shadow rounded"
+            class="
+              img-fluid
+              border border-primary
+              p-2
+              shadow
+              rounded
+              pro-headshot
+            "
           />
         </div>
         <div class="col-sm-6">
@@ -87,6 +94,9 @@
             that I'm on my way to becoming a front end developer! All my
             projects, including this website, have been designed and coded by
             me.
+            <br />
+            <br />
+            Talk about my coding knowledge and what I can offer an employer.
             <br />
             <br />
             When I'm not coding, I'm writing, listening to music, or reading.
