--- a/my-work.html
+++ b/my-work.html
@@ -65,5 +65,66 @@
         </div>
       </div>
     </nav>
+
+    <div class="header">
+      <h1 class="text-center">Projects</h1>
+      <h3 class="text-center additional-project-info">
+        Designed and Coded by Me
+      </h3>
+    </div>
+
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col-6 text-center">
+          <div class="weather-description">
+            <h2>Weather Application</h2>
+            <p>
+              This application was built using Vanilla JavaScript and an API. It
+              is open-sourced on
+              <a
+                href="https://github.com/genevieveleanne/my-vanilla-weather-app"
+                target="_blank"
+                >GitHub</a
+              >.
+            </p>
+            <button>
+              <a
+                href="https://upbeat-benz-e12b13.netlify.app/"
+                target="_blank"
+                class="app-link"
+                >Launch Weather App</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="col-6">
+          <img
+            src="/images/weather-app.png"
+            alt="Screenshot of My Weather Application"
+            class="img-fluid border border-info rounded shadow p-3"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img src="" alt="Screenshot of My Landing Page" />
+        </div>
+        <div class="col-6 text-center">
+          <div class="landing-page-description">
+            <h2>Landing Page</h2>
+            <p>This page was built using basic JavaScript.</p>
+            <button>
+              <a
+                href="https://upbeat-benz-e12b13.netlify.app/"
+                target="_blank"
+                class="app-link"
+                >Launch Landing Page</a
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
