Completed CSS for "Work" page and made it responsive

--- a/my-work.html
+++ b/my-work.html
@@ -75,7 +75,14 @@
 
     <div class="container">
       <div class="row mt-5">
-        <div class="col-6 text-center">
+        <div class="col-sm-6">
+          <img
+            src="/images/weather-app.png"
+            alt="Screenshot of My Weather Application"
+            class="img-fluid border border-white rounded shadow p-3"
+          />
+        </div>
+        <div class="col-sm-6 text-center">
           <div class="weather-description">
             <h2>Weather Application</h2>
             <p>
@@ -85,7 +92,8 @@
                 href="https://github.com/genevieveleanne/my-vanilla-weather-app"
                 target="_blank"
                 >GitHub</a
-              >.
+              >
+              and hosted on Netlify.
             </p>
             <button>
               <a
@@ -97,26 +105,23 @@
             </button>
           </div>
         </div>
-        <div class="col-6">
-          <img
-            src="/images/weather-app.png"
-            alt="Screenshot of My Weather Application"
-            class="img-fluid border border-info rounded shadow p-3"
-          />
-        </div>
       </div>
 
       <div class="row">
-        <div class="col-6">
-          <img src="" alt="Screenshot of My Landing Page" />
+        <div class="col-sm-6">
+          <img
+            src="/images/tea-landing-page.png"
+            alt="Screenshot of My Landing Page"
+            class="img-fluid border border-white rounded shadow p-3 mt-5"
+          />
         </div>
-        <div class="col-6 text-center">
+        <div class="col-sm-6 text-center">
           <div class="landing-page-description">
             <h2>Landing Page</h2>
             <p>This page was built using basic JavaScript.</p>
             <button>
               <a
-                href="https://upbeat-benz-e12b13.netlify.app/"
+                href="https://www.shecodes.io/workshops/shecodes-basics-13fad4d1-f7de-40b5-88b1-497dbc2e10af/projects/548189"
                 target="_blank"
                 class="app-link"
                 >Launch Landing Page</a
