--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me: Front End Developer, Genevieve Leanne Dominguez</title>
+    <title>
+      Contact Information: Front End Developer, Genevieve Leanne Dominguez
+    </title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -53,57 +55,17 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about-me.html">About</a>
+              <a class="nav-link" href="/about-me.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/my-work.html">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link active" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <div class="container-fluid">
-      <div class="row header">
-        <div class="col-sm-6">
-          <img
-            src="/images/image-me.JPG"
-            alt="Placeholder for Professional Headshot"
-            class="
-              img-fluid
-              border border-primary
-              p-2
-              shadow
-              rounded
-              pro-headshot
-            "
-          />
-        </div>
-        <div class="col-sm-6">
-          <h3 class="text-center">Hey, I'm</h3>
-          <h1 class="text-center">Genevieve Leanne Dominguez</h1>
-          <p class="mt-4">
-            Nice to meet you! I currently reside in Northern Nevada. I'm 25
-            years old with a BA in English. I was an online ESL teacher but
-            decided to make a career change when the industry made some
-            permanent changes. I began learning how to code in 2021 with
-            SheCodes (an amazing coding bootcamp, by the way). I'm proud to say
-            that I'm on my way to becoming a front end developer! All my
-            projects, including this website, have been designed and coded by
-            me.
-            <br />
-            <br />
-            Talk about my coding knowledge and what I can offer an employer.
-            <br />
-            <br />
-            When I'm not coding, I'm writing, listening to music, or reading.
-            Check out my work and don't hesitate to contact me!
-          </p>
-        </div>
-      </div>
-    </div>
   </body>
 </html>
