Updated the "About Me" paragraphs.

--- a/about-me.html
+++ b/about-me.html
@@ -86,21 +86,37 @@
           <h3 class="text-center">Hey, I'm</h3>
           <h1 class="text-center">Genevieve Leanne Dominguez</h1>
           <p class="mt-4">
-            Nice to meet you! I currently reside in Northern Nevada. I'm 25
-            years old with a BA in English. I was an online ESL teacher but
-            decided to make a career change when the industry made some
-            permanent changes. I began learning how to code in 2021 with
+            Nice to meet you! Let me tell you a little bit about myself before I
+            dive into my coding knowledge. I currently reside in Northern
+            Nevada. I'm 25 years old with a BA in English. I was an online ESL
+            teacher but decided to make a career change when the overseas
+            industry made some permanent changes. I'm learning how to code with
             SheCodes (an amazing coding bootcamp, by the way). I'm proud to say
             that I'm on my way to becoming a front end developer! All my
             projects, including this website, have been designed and coded by
-            me.
+            me.</p>
             <br />
+            
+            <p>I'm skilled in product development, product design, and product
+            management. Let me explain what I mean.</p>
+            <ul>
+              <li>Product Development:</li>
+              <ul>
+                <li>I conduct a professional development workflow for projects. This includes drawing up a wireframe for a site, choosing my design templates (colors, fonts, icons), and setting up a repo on GitHub. Once I complete this, I begin coding and regularly push it to a hosting site.</li>
+              </ul>
+              <li>Product Design:</li>
+              <ul>
+                <li>I enjoy creating a user-friendly experience. I accomplish this by applying my advanced knowledge of HTML, CSS, and Bootstrap. I also have foundational knowledge of JavaScript and APIs. I thoroughly test/debug my apps and love to make them responsive.  </li>
+              </ul>
+              <li>Product Management:</li>
+              <ul>
+                <li>I validate my ideas by ensuring they can be structured with HTML and designed with CSS before I begin coding. The tools I use to manage my apps are VS Code, Git, Chrome DevTools, and Netlify. </li>
+              </ul>
+            </ul>
             <br />
-            Talk about my coding knowledge and what I can offer an employer.
-            <br />
-            <br />
-            When I'm not coding, I'm writing, listening to music, or reading.
-            Check out my work and don't hesitate to contact me!
+          
+            <p>And that's a wrap! I love learning, so I want to increase my knowledge in web development. My goal is to eventually become a full-stack developer. When I'm not coding, I'm writing, listening to music, or reading.
+            Check out my work and don't hesitate to contact me!</p>
           </p>
         </div>
       </div>
