Updated the landing page description on the "Work" page.

--- a/my-work.html
+++ b/my-work.html
@@ -118,7 +118,12 @@
         <div class="col-sm-6 text-center">
           <div class="landing-page-description">
             <h2>Landing Page</h2>
-            <p>This page was built using basic JavaScript.</p>
+            <p>
+              This page was built using basic JavaScript. Sadly, this page is
+              not responsive. I coded it during my "Introduction to Coding"
+              bootcamp with SheCodes. It looks lovely on a desktop, so check it
+              out there!
+            </p>
             <button>
               <a
                 href="https://www.shecodes.io/workshops/shecodes-basics-13fad4d1-f7de-40b5-88b1-497dbc2e10af/projects/548189"
