Restructured the weather description and button on the "Home" page

--- a/about-me.html
+++ b/about-me.html
@@ -105,7 +105,7 @@
               </ul>
               <li>Product Design:</li>
               <ul>
-                <li>I enjoy creating a user-friendly experience. I accomplish this by applying my advanced knowledge of HTML, CSS, and Bootstrap. I also have foundational knowledge of JavaScript and APIs. I thoroughly test/debug my apps and love to make them responsive.  </li>
+                <li>I enjoy creating a user-friendly experience. I accomplish this by applying my advanced knowledge of HTML, CSS, and Bootstrap. I also have knowledge of JavaScript and APIs. I thoroughly test/debug my apps and love to make them responsive.  </li>
               </ul>
               <li>Product Management:</li>
               <ul>
