--- a/index.html
+++ b/index.html
@@ -77,21 +77,25 @@
 
     <div class="container mb-5">
       <div class="row">
+        <div
+          class="col-sm-6 text-center d-flex flex-column justify-content-center"
+        >
+          <div class="weather-app-description">
+            <h2>Weather Application</h2>
+            <p>Built using Vanilla JavaScript</p>
+          </div>
+          <button class="weather-app-description-btn w-50">
+            <a href="https://upbeat-benz-e12b13.netlify.app/" target="_blank"
+              >Launch Weather App</a
+            >
+          </button>
+        </div>
         <div class="col-sm-6">
           <img
             src="/images/weather-app.png"
             alt="Screenshot of My Weather Application"
             class="img-fluid border p-2 rounded shadow"
           />
-        </div>
-        <div class="col-sm-6 text-center weather-app-description">
-          <h2>Weather Application</h2>
-          <p>Built using Vanilla JavaScript</p>
-          <button>
-            <a href="https://upbeat-benz-e12b13.netlify.app/" target="_blank"
-              >Launch Weather App</a
-            >
-          </button>
         </div>
       </div>
     </div>
