Updated weather app description on the "Work" page

--- a/my-work.html
+++ b/my-work.html
@@ -93,7 +93,9 @@
                 target="_blank"
                 >GitHub</a
               >
-              and hosted on Netlify.
+              and hosted on Netlify. This page is not responsive. I coded it
+              during my second workshop with SheCodes. It looks lovely on a
+              desktop, so check it out there!
             </p>
             <button>
               <a
@@ -119,10 +121,10 @@
           <div class="landing-page-description">
             <h2>Landing Page</h2>
             <p>
-              This page was built using basic JavaScript. Sadly, this page is
-              not responsive. I coded it during my "Introduction to Coding"
-              bootcamp with SheCodes. It looks lovely on a desktop, so check it
-              out there!
+              This page was built using basic JavaScript. This page is not
+              responsive. I coded it during my "Introduction to Coding" bootcamp
+              with SheCodes. It looks lovely on a desktop, so check it out
+              there!
             </p>
             <button>
               <a
