Updated "About" page, Fixed responsiveness of "Work" page

--- a/about-me.html
+++ b/about-me.html
@@ -96,24 +96,23 @@
             projects, including this website, have been designed and coded by
             me.</p>
             <br />
-            <p>I'm skilled in product development, product design, and product
-            management. Let me explain what I mean.</p>
+            <p>This is my typical process:</p>
             <ul>
               <li>Product Development:</li>
               <ul>
-                <li>I conduct a professional development workflow for projects. This includes drawing up a wireframe for a site, choosing my design templates (colors, fonts, icons), and setting up a repo on GitHub. Once I complete this, I begin coding and regularly push it to a hosting site.</li>
+                <li>I conduct a professional development workflow for projects. This includes drawing up a wireframe for a site, choosing my design templates (colors, fonts, icons), and setting up a repo on Git. Once I complete this, I begin coding and regularly push it to a hosting site.</li>
               </ul>
               <li>Product Design:</li>
               <ul>
-                <li>I enjoy creating a user-friendly experience. I accomplish this by applying my advanced knowledge of HTML, CSS, and Bootstrap. I also have knowledge of JavaScript and APIs. I thoroughly test/debug my apps and love to make them responsive.  </li>
+                <li>I enjoy creating a user-friendly experience. I accomplish this by applying my knowledge of HTML, CSS, and Bootstrap. I also have knowledge of JavaScript and APIs. I thoroughly test/debug my apps and love to make them responsive.  </li>
               </ul>
               <li>Product Management:</li>
               <ul>
-                <li>I validate my ideas by ensuring they can be structured with HTML and designed with CSS before I begin coding. The tools I use to manage my apps are VS Code, Git, Chrome DevTools, and Netlify. </li>
+                <li>I validate my ideas by ensuring they can be structured with HTML and designed with CSS before I begin coding. The tools I use to manage my apps are VS Code, Git, and Netlify. </li>
               </ul>
             </ul>
             <br />
-            <p>And that's a wrap! I love learning, so I want to increase my knowledge in web development. My goal is to eventually become a full-stack developer. When I'm not coding, I'm writing, listening to music, or reading.
+            <p>And that's a wrap! I have a passion for learning, so I want to further my knowledge in web development. When I'm not coding, I'm writing, listening to music, or reading.
             Check out my work and don't hesitate to contact me!</p>
           </p>
         </div>
