--- a/my-work.html
+++ b/my-work.html
@@ -83,7 +83,7 @@
           />
         </div>
         <div class="col-sm-6 text-center">
-          <div class="weather-description">
+          <div class=" weather-description d-flex flex-column justify-content-center">
             <h2>Weather Application</h2>
             <p>
               This application was built using Vanilla JavaScript and an API. It
@@ -97,7 +97,7 @@
               during my second workshop with SheCodes. It looks lovely on a
               desktop, so check it out there!
             </p>
-            <button>
+            <button class="w-50">
               <a
                 href="https://upbeat-benz-e12b13.netlify.app/"
                 target="_blank"
@@ -118,15 +118,14 @@
           />
         </div>
         <div class="col-sm-6 text-center">
-          <div class="landing-page-description">
+          <div class="landing-page-description d-flex flex-column justify-content-center"">
             <h2>Landing Page</h2>
             <p>
               This page was built using basic JavaScript. This page is not
-              responsive. I coded it during my "Introduction to Coding" bootcamp
-              with SheCodes. It looks lovely on a desktop, so check it out
-              there!
+              responsive. I coded it during my first workshop with SheCodes. It
+              looks lovely on a desktop, so check it out there!
             </p>
-            <button>
+            <button class="w-50">
               <a
                 href="https://www.shecodes.io/workshops/shecodes-basics-13fad4d1-f7de-40b5-88b1-497dbc2e10af/projects/548189"
                 target="_blank"
