--- a/contact.html
+++ b/contact.html
@@ -67,5 +67,17 @@
         </div>
       </div>
     </nav>
+
+    <div class="header">
+      <h1 class="text-center">Contact Info</h1>
+      <h3 class="text-center additional-project-info">
+        I'd love to hear from you!
+      </h3>
+    </div>
+
+    <div class="contact-information">
+      <h2>Email</h2>
+      <p>genevieveleanned25@gmail.com</p>
+    </div>
   </body>
 </html>
