Updated style of the "Contact" page

--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,9 @@
       </h3>
     </div>
 
-    <div class="contact-information">
+    <div class="contact-info text-center">
       <h2>Email</h2>
-      <p>genevieveleanned25@gmail.com</p>
+      <p class="opacity-75">genevieveleanned25@gmail.com</p>
     </div>
   </body>
 </html>
