--- a/my-work.html
+++ b/my-work.html
@@ -97,7 +97,7 @@
               during my second workshop with SheCodes. It looks lovely on a
               desktop, so check it out there!
             </p>
-            <button class="w-50">
+            <button class="w-50 weather-app-btn">
               <a
                 href="https://upbeat-benz-e12b13.netlify.app/"
                 target="_blank"
@@ -125,7 +125,7 @@
               responsive. I coded it during my first workshop with SheCodes. It
               looks lovely on a desktop, so check it out there!
             </p>
-            <button class="w-50">
+            <button class="w-50 landing-pg-btn">
               <a
                 href="https://www.shecodes.io/workshops/shecodes-basics-13fad4d1-f7de-40b5-88b1-497dbc2e10af/projects/548189"
                 target="_blank"
