Updated the "About Me" paragraphs

--- a/about-me.html
+++ b/about-me.html
@@ -96,7 +96,7 @@
             projects, including this website, have been designed and coded by
             me.</p>
             <br />
-            <p>This is my typical process:</p>
+            <p>This is my typical coding process:</p>
             <ul>
               <li>Product Development:</li>
               <ul>
@@ -112,7 +112,7 @@
               </ul>
             </ul>
             <br />
-            <p>And that's a wrap! I have a passion for learning, so I want to further my knowledge in web development. When I'm not coding, I'm writing, listening to music, or reading.
+            <p>And that's a wrap! I have a passion for learning, so I plan on furthering my knowledge in web development. When I'm not coding, I'm writing, listening to music, or reading.
             Check out my work and don't hesitate to contact me!</p>
           </p>
         </div>
