--- a/my-work.html
+++ b/my-work.html
@@ -73,7 +73,7 @@
       </h3>
     </div>
 
-    <div class="container">
+    <div class="container mb-5">
       <div class="row mt-5">
         <div class="col-sm-6">
           <img
