--- a/about-me.html
+++ b/about-me.html
@@ -118,5 +118,18 @@
         </div>
       </div>
     </div>
+
+    <div class="footer-container d-flex justify-content-center">
+      <footer>
+        <a href="mailto:genevieveleanned25@gmail.com" target="_blank">
+          <i class="fas fa-envelope"></i></a>
+        <a href="#">
+          <i class="fab fa-instagram"></i></a>
+        <a href="#">
+          <i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/genevieveleanne" target="_blank">
+          <i class="fab fa-github"></i></a>
+      </footer>
+    </div>
   </body>
 </html>
