--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <p class="text-center fs-3 opacity-75 mb-5">Featured Project</p>
 
-    <div class="container mb-5">
+    <div class="container">
       <div class="row">
         <div
           class="col-sm-6 text-center d-flex flex-column justify-content-center"
@@ -98,6 +98,23 @@
           />
         </div>
       </div>
+    </div>
+
+    <div class="footer-container d-flex justify-content-center">
+      <footer>
+        <a href="mailto:genevieveleanned25@gmail.com" target="_blank">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://github.com/genevieveleanne" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </footer>
     </div>
   </body>
 </html>
