--- a/my-work.html
+++ b/my-work.html
@@ -73,7 +73,7 @@
       </h3>
     </div>
 
-    <div class="container mb-5">
+    <div class="container">
       <div class="row mt-5">
         <div class="col-sm-6">
           <img
@@ -136,6 +136,20 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="footer-container d-flex justify-content-center">
+      <footer>
+        <a href="mailto:genevieveleanned25@gmail.com">
+        <i class="fas fa-envelope"></i></a>
+      <a href="#">
+        <i class="fab fa-instagram"></i></a>
+        <a href="#">
+        <i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/genevieveleanne">
+        <i class="fab fa-github"></i></a>
+
+      </footer>
     </div>
   </body>
 </html>
