--- a/about-me.html
+++ b/about-me.html
@@ -112,7 +112,7 @@
               </ul>
             </ul>
             <br />
-            <p>And that's a wrap! I have a passion for learning, so I plan on furthering my knowledge in web development. When I'm not coding, I'm writing, listening to music, or reading.
+            <p>And that's a wrap! When I'm not coding, I'm writing, listening to music, or reading.
             Check out my work and don't hesitate to contact me!</p>
           </p>
         </div>
@@ -121,7 +121,7 @@
 
     <div class="footer-container d-flex justify-content-center">
       <footer>
-        <a href="mailto:genevieveleanned25@gmail.com" target="_blank">
+        <a href="mailto:genevieveleanned25@gmail.com">
           <i class="fas fa-envelope"></i></a>
         <a href="#">
           <i class="fab fa-instagram"></i></a>
