--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="footer-container d-flex justify-content-center">
       <footer>
-        <a href="mailto:genevieveleanned25@gmail.com" target="_blank">
+        <a href="mailto:genevieveleanned25@gmail.com">
           <i class="fas fa-envelope"></i>
         </a>
         <a href="#">
