--- a/my-work.html
+++ b/my-work.html
@@ -146,7 +146,7 @@
         <i class="fab fa-instagram"></i></a>
         <a href="#">
         <i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/genevieveleanne">
+        <a href="https://github.com/genevieveleanne"  target="_blank">
         <i class="fab fa-github"></i></a>
 
       </footer>
