--- a/about-me.html
+++ b/about-me.html
@@ -92,29 +92,35 @@
             teacher but decided to make a career change when the overseas
             industry made some permanent changes. I'm learning how to code with
             SheCodes (an amazing coding bootcamp, by the way). I'm proud to say
-            that I'm on my way to becoming a front end developer! All my
-            projects, including this website, have been designed and coded by
-            me.</p>
-            <br />
-            <p>This is my typical coding process:</p>
-            <ul>
-              <li>Product Development:</li>
-              <ul>
-                <li>I conduct a professional development workflow for projects. This includes drawing up a wireframe for a site, choosing my design templates (colors, fonts, icons), and setting up a repo on Git. Once I complete this, I begin coding and regularly push it to a hosting site.</li>
-              </ul>
-              <li>Product Design:</li>
-              <ul>
-                <li>I enjoy creating a user-friendly experience. I accomplish this by applying my knowledge of HTML, CSS, and Bootstrap. I also have knowledge of JavaScript and APIs. I thoroughly test/debug my apps and love to make them responsive.  </li>
-              </ul>
-              <li>Product Management:</li>
-              <ul>
-                <li>I validate my ideas by ensuring they can be structured with HTML and designed with CSS before I begin coding. The tools I use to manage my apps are VS Code, Git, and Netlify. </li>
-              </ul>
-            </ul>
-            <br />
-            <p>And that's a wrap! When I'm not coding, I'm writing, listening to music, or reading.
-            Check out my work and don't hesitate to contact me!</p>
+            that I'm on my way to becoming a front end developer!
           </p>
+
+          <p>
+            All my projects, including this website, have been designed and
+            coded by me. When I'm not coding, I'm writing, listening to music,
+            or reading.
+          </p>
+
+          <p>
+            Scroll down for an in-depth look at my coding skills. Check out my
+            work and don't hesitate to contact me!
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <h2>Product Development</h2>
+        </div>
+
+        <div class="col-sm-4">
+          <h2>Product Design</h2>
+        </div>
+
+        <div class="col-sm-4">
+          <h2>Product Management</h2>
         </div>
       </div>
     </div>
@@ -122,13 +128,13 @@
     <div class="footer-container d-flex justify-content-center">
       <footer>
         <a href="mailto:genevieveleanned25@gmail.com">
-          <i class="fas fa-envelope"></i></a>
-        <a href="#">
-          <i class="fab fa-instagram"></i></a>
-        <a href="#">
-          <i class="fab fa-twitter"></i></a>
+          <i class="fas fa-envelope"></i
+        ></a>
+        <a href="#"> <i class="fab fa-instagram"></i></a>
+        <a href="#"> <i class="fab fa-twitter"></i></a>
         <a href="https://github.com/genevieveleanne" target="_blank">
-          <i class="fab fa-github"></i></a>
+          <i class="fab fa-github"></i
+        ></a>
       </footer>
     </div>
   </body>
