Added to the structure of my coding skills grid on the "About" page

--- a/about-me.html
+++ b/about-me.html
@@ -102,8 +102,8 @@
           </p>
 
           <p>
-            Scroll down for an in-depth look at my coding skills. Check out my
-            work and don't hesitate to contact me!
+            Scroll down for an in-depth look at my skills. Check out my work and
+            don't hesitate to contact me!
           </p>
         </div>
       </div>
@@ -111,16 +111,57 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
-          <h2>Product Development</h2>
+        <div class="col-sm-4 border border-info border-2">
+          <i class="fas fa-pencil-ruler"></i>
+          <h2>Design</h2>
+          <p class="opacity-75">
+            It's all about a smooth user experience. I love to use colors and
+            fonts that complement each other, and I build simple content
+            structure.
+          </p>
+          <p>Tools:</p>
+          <ul>
+            <li>InVision</li>
+            <li>Pen and Paper</li>
+            <li>Color Palettes</li>
+            <li>Google Fonts</li>
+            <li>Font Awesome</li>
+          </ul>
         </div>
 
-        <div class="col-sm-4">
-          <h2>Product Design</h2>
+        <div class="col-sm-4 border border-info border-2">
+          <i class="fas fa-code"></i>
+          <h2>Development</h2>
+          <p class="opacity-75">
+            I like to ensure that my sketches can be converted into code before
+            I begin. I thoroughly test/debug my apps and love to make them
+            responsive.
+          </p>
+          <p>Tools:</p>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>VS Code</li>
+            <li>Bootstrap</li>
+            <li>API</li>
+            <li>GitHub</li>
+          </ul>
         </div>
 
-        <div class="col-sm-4">
-          <h2>Product Management</h2>
+        <div class="col-sm-4 border border-info border-2">
+          <i class="fas fa-user-cog"></i>
+          <h2>Hosting</h2>
+          <p class="opacity-75">
+            I love making my apps responsive! Although I only know the basics of
+            SEO right now, I'm increasing my knowledge!
+          </p>
+          <p>Tools:</p>
+          <ul>
+            <li>Netlify</li>
+            <li>Responsive</li>
+            <li>SEO - Basics</li>
+          </ul>
         </div>
       </div>
     </div>
