--- a/about-me.html
+++ b/about-me.html
@@ -111,15 +111,15 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 border border-info border-2">
+        <div class="col-sm-4 border border-info border-2 coding-skills-grid">
           <i class="fas fa-pencil-ruler"></i>
-          <h2>Design</h2>
+          <h2 class="text-center">Design</h2>
           <p class="opacity-75">
             It's all about a smooth user experience. I love to use colors and
             fonts that complement each other, and I build simple content
             structure.
           </p>
-          <p>Tools:</p>
+          <p class="tools-paragraph">Tools:</p>
           <ul>
             <li>InVision</li>
             <li>Pen and Paper</li>
@@ -129,15 +129,15 @@
           </ul>
         </div>
 
-        <div class="col-sm-4 border border-info border-2">
+        <div class="col-sm-4 border border-info border-2 coding-skills-grid">
           <i class="fas fa-code"></i>
-          <h2>Development</h2>
+          <h2 class="text-center">Development</h2>
           <p class="opacity-75">
             I like to ensure that my sketches can be converted into code before
             I begin. I thoroughly test/debug my apps and love to make them
             responsive.
           </p>
-          <p>Tools:</p>
+          <p class="tools-paragraph">Tools:</p>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -149,14 +149,14 @@
           </ul>
         </div>
 
-        <div class="col-sm-4 border border-info border-2">
+        <div class="col-sm-4 border border-info border-2 coding-skills-grid">
           <i class="fas fa-user-cog"></i>
-          <h2>Hosting</h2>
+          <h2 class="text-center">Hosting</h2>
           <p class="opacity-75">
             I love making my apps responsive! Although I only know the basics of
             SEO right now, I'm increasing my knowledge!
           </p>
-          <p>Tools:</p>
+          <p class="tools-paragraph">Tools:</p>
           <ul>
             <li>Netlify</li>
             <li>Responsive</li>
