Updated structure of coding skills grid

--- a/about-me.html
+++ b/about-me.html
@@ -134,8 +134,7 @@
           <h2 class="text-center">Development</h2>
           <p class="opacity-75">
             I like to ensure that my sketches can be converted into code before
-            I begin. I thoroughly test/debug my apps and love to make them
-            responsive.
+            I begin. I thoroughly test/debug my apps.
           </p>
           <p class="tools-paragraph">Tools:</p>
           <ul>
