--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
       <h4>Front End Developer based in Nevada</h4>
-      <button><a href="/my-work.html">Check out my work!</a></button>
+      <button class="work-link">
+        <a href="/my-work.html">Check out my work!</a>
+      </button>
     </div>
 
     <p class="text-center fs-3 opacity-75 mb-5">Featured Project</p>
