Updated project descriptions on "Work" page

--- a/my-work.html
+++ b/my-work.html
@@ -93,9 +93,7 @@
                 target="_blank"
                 >GitHub</a
               >
-              and hosted on Netlify. This page is not responsive. I coded it
-              during my second workshop with SheCodes. It looks lovely on a
-              desktop, so check it out there!
+              and hosted on Netlify. This app is not responsive, so check it out on a desktop!
             </p>
             <button class="w-50 weather-app-btn">
               <a
@@ -121,9 +119,8 @@
           <div class="landing-page-description d-flex flex-column justify-content-center"">
             <h2>Landing Page</h2>
             <p>
-              This page was built using basic JavaScript. This page is not
-              responsive. I coded it during my first workshop with SheCodes. It
-              looks lovely on a desktop, so check it out there!
+              This page was built using basic JavaScript. It is not
+              responsive, so check it out on a desktop!
             </p>
             <button class="w-50 landing-pg-btn">
               <a
