--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
       <h4>Front End Developer based in Nevada</h4>
-      <button class="work-link">
+      <button>
         <a href="/my-work.html">Check out my work!</a>
       </button>
     </div>
@@ -86,7 +86,7 @@
             <h2>Weather Application</h2>
             <p>Built using Vanilla JavaScript</p>
           </div>
-          <button class="weather-app-description-btn w-50">
+          <button class="weather-app-btn w-50">
             <a href="https://upbeat-benz-e12b13.netlify.app/" target="_blank"
               >Launch Weather App</a
             >
