Restructured portfolio CSS

--- a/my-work.html
+++ b/my-work.html
@@ -83,7 +83,7 @@
           />
         </div>
         <div class="col-sm-6 text-center">
-          <div class=" weather-description d-flex flex-column justify-content-center">
+          <div class=" weather-app-description d-flex flex-column justify-content-center">
             <h2>Weather Application</h2>
             <p>
               This application was built using Vanilla JavaScript and an API. It
