--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <i class="fas fa-envelope"></i>
         </a>
         <a href="#">
-          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
         <a href="#">
           <i class="fab fa-twitter"></i>
