Added GitHub link to website

--- a/index.html
+++ b/index.html
@@ -118,5 +118,16 @@
         </a>
       </footer>
     </div>
+
+    <p class="text-center coder-information">
+      This website was built by Genevieve Leanne Dominguez. It is open-sourced
+      on
+      <a
+        href="https://github.com/genevieveleanne/my-work-portfolio"
+        target="_blank"
+        class="github-link"
+        >GitHub.</a
+      >
+    </p>
   </body>
 </html>
