--- a/about-me.html
+++ b/about-me.html
@@ -170,7 +170,7 @@
         <a href="mailto:genevieveleanned25@gmail.com">
           <i class="fas fa-envelope"></i
         ></a>
-        <a href="#"> <i class="fab fa-instagram"></i></a>
+        <a href="#"> <i class="fab fa-linkedin"></i></a>
         <a href="#"> <i class="fab fa-twitter"></i></a>
         <a href="https://github.com/genevieveleanne" target="_blank">
           <i class="fab fa-github"></i
