--- a/my-work.html
+++ b/my-work.html
@@ -140,7 +140,7 @@
         <a href="mailto:genevieveleanned25@gmail.com">
         <i class="fas fa-envelope"></i></a>
       <a href="#">
-        <i class="fab fa-instagram"></i></a>
+         <i class="fab fa-linkedin"></i></a>
         <a href="#">
         <i class="fab fa-twitter"></i></a>
         <a href="https://github.com/genevieveleanne"  target="_blank">
