--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Contact Information: Front End Developer, Genevieve Leanne Dominguez
+      Contact Information for Genevieve Leanne Dominguez - Front End Developer
     </title>
 
     <link
