--- a/about-me.html
+++ b/about-me.html
@@ -71,7 +71,7 @@
         <div class="col-sm-6">
           <img
             src="/images/image-me.JPG"
-            alt="Placeholder for Professional Headshot"
+            alt="Professional Picture of Genevieve Leanne Dominguez"
             class="
               img-fluid
               border border-primary
