--- a/about-me.html
+++ b/about-me.html
@@ -167,12 +167,20 @@
 
     <div class="footer-container d-flex justify-content-center">
       <footer>
-        <a href="mailto:genevieveleanned25@gmail.com">
+        <a href="mailto:genevieveleanned25@gmail.com" title="Email">
           <i class="fas fa-envelope"></i
         ></a>
-        <a href="#"> <i class="fab fa-linkedin"></i></a>
-        <a href="#"> <i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/genevieveleanne" target="_blank">
+        <a href="#" target="_blank" title="LinkedIn Profile">
+          <i class="fab fa-linkedin"></i
+        ></a>
+        <a href="#" target="_blank" title="Twitter Profile">
+          <i class="fab fa-twitter"></i
+        ></a>
+        <a
+          href="https://github.com/genevieveleanne"
+          target="_blank"
+          title="GitHub Profile"
+        >
           <i class="fab fa-github"></i
         ></a>
       </footer>
