Updated titles in head

--- a/about-me.html
+++ b/about-me.html
@@ -103,7 +103,7 @@
 
           <p>
             Scroll down for an in-depth look at my skills. Check out my work and
-            don't hesitate to contact me!
+            you are always welcome to contact me!
           </p>
         </div>
       </div>
