--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front End Developer - Genevieve Leanne Dominguez</title>
+    <meta
+      name="description"
+      content="Genevieve is a front end developer based in Northern Nevada."
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
