Created meta descriptions for each page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Front End Developer - Genevieve Leanne Dominguez</title>
     <meta
       name="description"
-      content="Genevieve is a front end developer based in Northern Nevada."
+      content="This is Genevieve Leanne Dominguez's front end developer portfolio. You can learn more about Genevieve, her apps and pages, and how to get in touch with her on this website."
     />
 
     <link
