--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
     <title>
       Contact Information for Genevieve Leanne Dominguez - Front End Developer
     </title>
+    <meta
+      name="description"
+      content="This is the contact page for Front End Developer, Genevieve Leanne Dominguez"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
