--- a/my-work.html
+++ b/my-work.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work by Genevieve Leanne Dominguez - Front End Developer</title>
+    <meta name="description" content="Check out Genevieve's apps and pages she's built as a front end developer. If you like what you see, contact her!">
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
