--- a/about-me.html
+++ b/about-me.html
@@ -90,24 +90,17 @@
           <h3 class="text-center">Hey, I'm</h3>
           <h1 class="text-center">Genevieve Leanne Dominguez</h1>
           <p class="mt-4">
-            Nice to meet you! Let me tell you a little bit about myself before I
-            dive into my coding knowledge. I currently reside in Northern
-            Nevada. I'm 25 years old with a BA in English. I was an online ESL
-            teacher but decided to make a career change when the overseas
-            industry made some permanent changes. I'm learning how to code with
-            SheCodes (an amazing coding bootcamp, by the way). I'm proud to say
-            that I'm on my way to becoming a front end developer!
+            Nice to meet you! I currently reside in Northern Nevada. I'm 25
+            years old with a BA in English. I was an online ESL teacher but
+            decided to make a career change when the overseas industry made some
+            permanent changes. I'm studying to become a professional front end
+            developer and web designer at SheCodes and Udemy.
           </p>
 
           <p>
             All my projects, including this website, have been designed and
             coded by me. When I'm not coding, I'm writing, listening to music,
             or reading.
-          </p>
-
-          <p>
-            Scroll down for an in-depth look at my skills. Check out my work and
-            you are always welcome to contact me!
           </p>
         </div>
       </div>
@@ -126,7 +119,9 @@
           <p class="tools-paragraph">Tools:</p>
           <ul>
             <li>InVision</li>
-            <li>Pen and Paper</li>
+            <li>Figma - Basics</li>
+            <li>BeFunky - Basics</li>
+            <li>Wireframes</li>
             <li>Color Palettes</li>
             <li>Google Fonts</li>
             <li>Font Awesome</li>
@@ -147,6 +142,7 @@
             <li>JavaScript</li>
             <li>VS Code</li>
             <li>Bootstrap</li>
+            <li>Chrome DevTools</li>
             <li>API</li>
             <li>GitHub</li>
           </ul>
@@ -156,14 +152,16 @@
           <i class="fas fa-user-cog"></i>
           <h2 class="text-center">Hosting</h2>
           <p class="opacity-75">
-            I love making my apps responsive! Although I only know the basics of
-            SEO right now, I'm increasing my knowledge!
+            I firmly believe that a website should be responsive across devices
+            because each user is unique and should have access to a high-quality
+            experience.
           </p>
           <p class="tools-paragraph">Tools:</p>
           <ul>
             <li>Netlify</li>
-            <li>Responsive</li>
-            <li>SEO - Basics</li>
+            <li>Responsive - Web</li>
+            <li>Responsive - Mobile</li>
+            <li>Responsive - Tablet</li>
           </ul>
         </div>
       </div>
@@ -173,12 +171,6 @@
       <footer>
         <a href="mailto:genevieveleanned25@gmail.com" title="Email">
           <i class="fas fa-envelope"></i
-        ></a>
-        <a href="#" target="_blank" title="LinkedIn Profile">
-          <i class="fab fa-linkedin"></i
-        ></a>
-        <a href="#" target="_blank" title="Twitter Profile">
-          <i class="fab fa-twitter"></i
         ></a>
         <a
           href="https://github.com/genevieveleanne"
