--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,7 @@
     </nav>
 
     <div class="header">
-      <h1 class="text-center">Contact Info</h1>
-      <h3 class="text-center additional-project-info">
-        I'd love to hear from you!
-      </h3>
+      <h1 class="text-center">I'd love to hear from you!</h1>
     </div>
 
     <div class="contact-info text-center">
