--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="header">
       <h3>Hi, I'm</h3>
       <h1>Genevieve Leanne Dominguez</h1>
-      <h4>Front End Developer based in Nevada</h4>
+      <h4>Front End Developer and Web Designer | NV</h4>
       <button>
         <a href="/my-work.html">Check out my work!</a>
       </button>
@@ -110,12 +110,6 @@
       <footer>
         <a href="mailto:genevieveleanned25@gmail.com" title="Email">
           <i class="fas fa-envelope"></i>
-        </a>
-        <a href="#" target="_blank" title="LinkedIn Profile">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="#" target="_blank" title="Twitter Profile">
-          <i class="fab fa-twitter"></i>
         </a>
         <a
           href="https://github.com/genevieveleanne"
