Updated the landing page on the "Work" page

--- a/my-work.html
+++ b/my-work.html
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col-sm-6">
           <img
-            src="/images/tea-landing-page.png"
+            src="/images/landing-page.png"
             alt="Screenshot of My Landing Page"
             class="img-fluid border border-white rounded shadow p-3 mt-5"
           />
@@ -120,12 +120,12 @@
           <div class="landing-page-description d-flex flex-column justify-content-center"">
             <h2>Landing Page</h2>
             <p>
-              This page was built using basic JavaScript. It is not
+              This page was built using HTML, CSS, and Bootstrap. It is not
               responsive, so check it out on a desktop!
             </p>
             <button class="w-50 landing-pg-btn">
               <a
-                href="https://www.shecodes.io/workshops/shecodes-basics-13fad4d1-f7de-40b5-88b1-497dbc2e10af/projects/548189"
+                href="https://relaxed-visvesvaraya-7351aa.netlify.app/"
                 target="_blank"
                 class="app-link"
                 >Launch Landing Page</a
