Updated landing page on "Work" page

--- a/my-work.html
+++ b/my-work.html
@@ -120,7 +120,14 @@
           <div class="landing-page-description d-flex flex-column justify-content-center"">
             <h2>Landing Page</h2>
             <p>
-              This page was built using HTML, CSS, and Bootstrap. It is not
+              This page was built using HTML, CSS, and Bootstrap. It
+              is open-sourced on
+              <a
+                href="https://github.com/genevieveleanne/landing-page"
+                target="_blank"
+                >GitHub</a
+              >
+              and hosted on Netlify. It is not
               responsive, so check it out on a desktop!
             </p>
             <button class="w-50 landing-pg-btn">
