Updated "About Me" page

--- a/about-me.html
+++ b/about-me.html
@@ -76,14 +76,7 @@
           <img
             src="/images/image-me.JPG"
             alt="Professional Picture of Genevieve Leanne Dominguez"
-            class="
-              img-fluid
-              border border-primary
-              p-2
-              shadow
-              rounded
-              pro-headshot
-            "
+            class="img-fluid border border-primary p-2 shadow rounded pro-headshot"
           />
         </div>
         <div class="col-sm-6">
@@ -143,7 +136,7 @@
             <li>VS Code</li>
             <li>Bootstrap</li>
             <li>Chrome DevTools</li>
-            <li>API</li>
+            <li>API - Basics</li>
             <li>GitHub</li>
           </ul>
         </div>
