Updated "About Me" page

--- a/about-me.html
+++ b/about-me.html
@@ -75,7 +75,7 @@
         <div class="col-sm-6">
           <img
             src="/images/image-me.JPG"
-            alt="Professional Picture of Genevieve Leanne Dominguez"
+            alt="Professional Image of Genevieve Leanne Dominguez"
             class="img-fluid border border-primary p-2 shadow rounded pro-headshot"
           />
         </div>
@@ -87,13 +87,12 @@
             years old with a BA in English. I was an online ESL teacher but
             decided to make a career change when the overseas industry made some
             permanent changes. I'm studying to become a professional front end
-            developer and web designer at SheCodes and Udemy.
+            developer and web designer.
           </p>
 
           <p>
-            All my projects, including this website, have been designed and
-            coded by me. When I'm not coding, I'm writing, listening to music,
-            or reading.
+            I've designed and coded all my projects. When I'm not coding, I'm
+            writing, listening to music, or reading.
           </p>
         </div>
       </div>
