--- a/index.html
+++ b/index.html
@@ -87,19 +87,21 @@
           class="col-sm-6 text-center d-flex flex-column justify-content-center"
         >
           <div class="weather-app-description">
-            <h2>Weather Application</h2>
-            <p>Built using Vanilla JavaScript</p>
+            <h2>React Weather App</h2>
+            <p>Built using React</p>
           </div>
           <button class="weather-app-btn w-50">
-            <a href="https://upbeat-benz-e12b13.netlify.app/" target="_blank"
+            <a
+              href="https://quirky-tereshkova-98db8d.netlify.app/"
+              target="_blank"
               >Launch Weather App</a
             >
           </button>
         </div>
         <div class="col-sm-6">
           <img
-            src="/images/weather-app.png"
-            alt="Screenshot of My Weather Application"
+            src="/images/React Weather App Screenshot.png"
+            alt="Screenshot of My React Weather Application"
             class="img-fluid border p-2 rounded shadow"
           />
         </div>
