--- a/my-work.html
+++ b/my-work.html
@@ -75,6 +75,39 @@
     </div>
 
     <div class="container">
+        <div class="row mt-5">
+        <div class="col-sm-6">
+          <img
+            src="/images/React Weather App Screenshot.png"
+            alt="Screenshot of My React Weather App"
+            class="img-fluid border border-white rounded shadow p-3"
+          />
+        </div>
+        <div class="col-sm-6 text-center">
+          <div class=" weather-app-description d-flex flex-column justify-content-center">
+            <h2>React Weather App</h2>
+            <p>
+              This application was built using React and an API. It
+              is open-sourced on
+              <a
+                href="https://github.com/genevieveleanne/react-weather-app"
+                target="_blank"
+                >GitHub</a
+              >
+              and hosted on Netlify. 
+            </p>
+            <button class="w-50 weather-app-btn">
+              <a
+                href="https://quirky-tereshkova-98db8d.netlify.app/"
+                target="_blank"
+                class="app-link"
+                >Launch React Weather App</a
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+
       <div class="row mt-5">
         <div class="col-sm-6">
           <img
@@ -85,7 +118,7 @@
         </div>
         <div class="col-sm-6 text-center">
           <div class=" weather-app-description d-flex flex-column justify-content-center">
-            <h2>Weather Application</h2>
+            <h2>Weather App</h2>
             <p>
               This application was built using Vanilla JavaScript and an API. It
               is open-sourced on
