Updated Home and Work page to include Dictionary App

--- a/my-work.html
+++ b/my-work.html
@@ -78,6 +78,39 @@
         <div class="row mt-5">
         <div class="col-sm-6">
           <img
+            src="/images/react-dictionary-app.png"
+            alt="Screenshot of My React Dictionary App"
+            class="img-fluid border border-white rounded shadow p-3"
+          />
+        </div>
+        <div class="col-sm-6 text-center">
+          <div class=" weather-app-description d-flex flex-column justify-content-center">
+            <h2>React Dictionary App</h2>
+            <p>
+              This application was built using React and an API. It
+              is open-sourced on
+              <a
+                href="https://github.com/genevieveleanne/react-dictionary-app"
+                target="_blank"
+                >GitHub</a
+              >
+              and hosted on Netlify. 
+            </p>
+            <button class="w-50 weather-app-btn">
+              <a
+                href="https://jovial-spence-7a075e.netlify.app/"
+                target="_blank"
+                class="app-link"
+                >Launch App</a
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+
+        <div class="row mt-5">
+        <div class="col-sm-6">
+          <img
             src="/images/React Weather App Screenshot.png"
             alt="Screenshot of My React Weather App"
             class="img-fluid border border-white rounded shadow p-3"
@@ -101,7 +134,7 @@
                 href="https://quirky-tereshkova-98db8d.netlify.app/"
                 target="_blank"
                 class="app-link"
-                >Launch React Weather App</a
+                >Launch App</a
               >
             </button>
           </div>
@@ -134,7 +167,7 @@
                 href="https://upbeat-benz-e12b13.netlify.app/"
                 target="_blank"
                 class="app-link"
-                >Launch Weather App</a
+                >Launch App</a
               >
             </button>
           </div>
@@ -168,7 +201,7 @@
                 href="https://relaxed-visvesvaraya-7351aa.netlify.app/"
                 target="_blank"
                 class="app-link"
-                >Launch Landing Page</a
+                >Launch Page</a
               >
             </button>
           </div>
