--- a/index.html
+++ b/index.html
@@ -87,21 +87,19 @@
           class="col-sm-6 text-center d-flex flex-column justify-content-center"
         >
           <div class="weather-app-description">
-            <h2>React Weather App</h2>
+            <h2>React Dictionary App</h2>
             <p>Built using React</p>
           </div>
           <button class="weather-app-btn w-50">
-            <a
-              href="https://quirky-tereshkova-98db8d.netlify.app/"
-              target="_blank"
-              >Launch Weather App</a
+            <a href="https://jovial-spence-7a075e.netlify.app/" target="_blank"
+              >Launch App</a
             >
           </button>
         </div>
         <div class="col-sm-6">
           <img
-            src="/images/React Weather App Screenshot.png"
-            alt="Screenshot of My React Weather Application"
+            src="/images/react-dictionary-app.png"
+            alt="Screenshot of My React Dictionary Application"
             class="img-fluid border p-2 rounded shadow"
           />
         </div>
